2009-04-30  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#111026 - Notifications, Event notification overview displays
	wrong message

	* src/hd-incoming-events.c: Cleanup code make it more simple and
	easier to understand. Add docs. Remove redundance. Make it easier to
	enhance it for chat/sms account split functionallity. Fix bugs.

	* src/hd-notification-manager.c
	  (hd_notification_manager_call_dbus_callback_with_arg):
	* src/hd-notification-manager.h: Move code from HDIncomingEvents into
	new hd_notification_manager_call_dbus_callback_with_arg function.

	* src/test-notifications.py (emit_notification): Update to add more
	debug output.

	* debian/changelog: Update.

2009-04-30  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.24
	* configure.ac: 0.3.24

2009-04-30  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Fix Coverity issues.
	* src/hd-incoming-events.c (group_activate_notifications): Remove
	unneeded variable 'banner'.
	* src/hd-activate-views-dialog.c (hd_activate_views_dialog_init):
	Remove unneeded variable 'current_theme_backgrounds'.

2009-04-29  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#113822 - Application shortcut label should have hardcoded
	colours

	* src/hd-task-shortcut.c (LABEL_FONT, hd_task_shortcut_class_init):
	Use new hardcoded colours and SmallSystemFont for the label.

2009-04-27  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#111639 - Default icon is not shown for application
	shortcuts.

	* src/hd-task-manager.c (hd_task_manager_load_desktop_file):
	* src/hd-task-shortcut.c (hd_task_shortcut_desktop_file_changed_cb):
	Fallback to default icon if no application icon is available.

2009-04-27  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.23
	* configure.ac: 0.3.23

2009-04-23  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#105139 - Fix broken HildonBanner theming.

	* src/hd-system-notifications.c (create_note_infoprint): Fix Broken
	HildonBanner theming.
